# Noteworthy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  default.yml
build-aux/: cargo-test.sh  checks.py  io.github.seadve.Noteworthy.Devel.json  io.github.seadve.Noteworthy.json  meson_post_install.py
data/: io.github.seadve.Noteworthy.desktop.in.in  io.github.seadve.Noteworthy.gschema.xml.in  io.github.seadve.Noteworthy.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: camera.ui  content-attachment-view-audio-recorder-button.ui  content-attachment-view-audio-row.ui  content-attachment-view-camera-button.ui  content-attachment-view-file-importer-button.ui  content-attachment-view-file-opener-button.ui  content-attachment-view-other-row.ui  content-attachment-view-picture-row.ui  content-attachment-view-row.ui  content-attachment-view.ui  content-view-tag-bar-row.ui  content-view-tag-bar.ui  content-view-tag-list-view-row.ui  content-view-tag-list-view.ui  content-view.ui  content.ui  content_header.ui  content_view.ui  context_menu_bin.ui  file-chooser-button.ui  login.ui  main_window.ui  note-tag-dialog-row.ui  note-tag-dialog.ui  note_row.ui  note_view.ui  notes_sidebar.ui  picture-viewer.ui  rounded-picture.ui  session.ui  setup.ui  sidebar-category-row.ui  sidebar-note-row.ui  sidebar-theme-selector.ui  sidebar-view-switcher-item-row.ui  sidebar-view-switcher-popover.ui  sidebar-view-switcher.ui  sidebar.ui  sidebar_category_row.ui  sidebar_note_row.ui  (+7 more)
hooks/: pre-commit.hook
po/: POTFILES.in
src/: application.rs  camera.rs  date.rs  error.rs  login.rs  main.rs  main_window.rs  meson.build  repository.rs  setup.rs  utils.rs  window.rs
src/components/: context_menu_bin.rs  file_chooser_button.rs  mod.rs  sync_button.rs
src/core/: audio_player.rs  audio_player_handler.rs  audio_recorder.rs  audio_recording.rs  clock_time.rs  date_time.rs  file_type.rs  mod.rs  note_manager.rs  note_repository.rs  point.rs  repository.rs  repository_watcher.rs  ssh_key.rs
src/core/note_repository/: mod.rs  repository.rs  repository_watcher.rs  sync_state.rs
src/core/repository/: git2_repo.rs  mod.rs  wrapper.rs
src/model/: attachment.rs  attachment_kind.rs  attachment_list.rs  date_time.rs  mod.rs  note.rs  note_id.rs  note_list.rs  note_metadata.rs  note_tag_list.rs  notes_list.rs  tag.rs  tag_list.rs
src/model/note/: id.rs  metadata.rs  mod.rs
src/repository/: git2_repo.rs  mod.rs  wrapper.rs
src/session/: mod.rs  note_list.rs  note_manager.rs  note_repository.rs  notes_list.rs  picture_viewer.rs  tag.rs  tag_list.rs
src/session/content/: content_header.rs  content_view.rs  mod.rs  view.rs
src/session/content/attachment_view/: audio_recorder_button.rs  audio_row.rs  camera_button.rs  file_importer_button.rs  file_opener_button.rs  mod.rs  other_row.rs  picture_row.rs  row.rs
src/session/content/attachment_view/audio_recorder_button/: mod.rs  visualizer.rs
src/session/content/view/: mod.rs
src/session/content/view/tag_bar/: mod.rs  row.rs
src/session/content/view/tag_list_view/: mod.rs  row.rs
src/session/content_view/: content_header.rs  mod.rs
src/session/manager/: local_manager.rs  local_notes_manager.rs  mod.rs  note.rs
src/session/note/: id.rs  local_note.rs  metadata.rs  mod.rs  note_list.rs  note_tag_list.rs  tag.rs  tag_list.rs
src/session/note_content_view/: mod.rs
src/session/note_tag_dialog/: mod.rs  note_tag_lists.rs  row.rs
src/session/notes_sidebar/: mod.rs
src/session/provider/: local_provider.rs  mod.rs
src/session/sidebar/: category.rs  category_row.rs  item_list.rs  mod.rs  note_row.rs  row.rs  selection.rs  sync_button.rs  theme_selector.rs
src/session/sidebar/view_switcher/: item.rs  item_kind.rs  item_list.rs  item_row.rs  mod.rs  popover.rs
src/session/tag_dialog/: mod.rs  row.rs
src/session/tag_editor/: mod.rs  row.rs
src/widgets/: audio_visualizer.rs  camera.rs  mod.rs  note_row.rs  note_view.rs  notes_sidebar.rs  picture_viewer.rs  rounded_picture.rs  scrollable_picture.rs  time_label.rs
src/widgets/camera_paintable/: camera_sink.rs  frame.rs  mod.rs
