[package]
name = "noteworthy"
version = "0.1.0"
authors = ["Dave Patrick <davecruz48@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
once_cell = "1.9.0"
gtk = { package = "gtk4", version = "0.4.4", features = ["v4_6"] }
gtk_source = { package = "sourceview5", version = "0.4.0" }
gst = { package = "gstreamer", version = "0.18.1" }
gst-plugin-gtk4 = "0.1.0"
gst_pbutils = { package = "gstreamer-pbutils", version = "0.18.0" }
adw = { package = "libadwaita", version = "0.1.0" }

anyhow = "1.0.52"
indexmap = { version = "1.8.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
gray_matter = "0.2.1"

openssl = "0.10.38"
git2 = "0.13.25"
regex = "1.5.4"
num_enum = "0.5.6"

pulsectl-rs = "0.3.2"
futures-channel = "0.3.19"
thiserror = "1.0.30"
