[package]
name = "noteworthy"
version = "0.1.0"
authors = ["Dave Patrick <davecruz48@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.5.0"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
once_cell = "1.10.0"
gtk = { package = "gtk4", version = "0.4.6", features = ["v4_6"] }
gtk_source = { package = "sourceview5", version = "0.4.1" }
gst = { package = "gstreamer", version = "0.18.6" }
gst-plugin-gtk4 = "0.1.1"
gst_pbutils = { package = "gstreamer-pbutils", version = "0.18.0" }
adw = { package = "libadwaita", version = "0.1.0" }

anyhow = "1.0.56"
indexmap = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9"
gray_matter = "0.2.2"

openssl = "0.10.38"
git2 = "0.18"
regex = "1.5.5"
num_enum = "0.7"

pulsectl-rs = "0.3.2"
futures-channel = "0.3.21"
thiserror = "1.0.30"
